--- a/styles/index.css
+++ b/styles/index.css
@@ -209,6 +209,11 @@ main .shop .shop_container .slide_wrap .product_wrap .swiper-button-next:hover {
     filter: invert(0);
 }
 .swiper-button-next:after, .swiper-button-prev:after {display: none;}
+/* 개별 swiper-wrapper */
+.product_swiper .perfume {display: flex;}
+.product_swiper .fragrance {display: none;}
+.product_swiper .body {display: none;}
+.product_swiper .natural {display: none;}
 /* 세번째 section */
 main .set {
     display: flex;
@@ -570,6 +575,9 @@ main .store_wrap .store_container .store_pic_wrap .store_pic .right_pic img:last
 main .store_wrap .more_store{
     width: 60px; height: 60px;
     position: absolute; bottom: 80px; left: 50%;
+}
+main .store_wrap .more_store:hover img {
+    filter: invert(0.5);
 }
 main .store_wrap .more_store img{
     filter: invert(1);
